--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://DininduChamikara.github.io/Pre-Annotation-Objects-Generator-NER",
   "name": "ner_corpus",
   "version": "0.1.0",
   "private": true,
@@ -14,6 +15,7 @@
     "axios": "^1.5.1",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
+    "gh-pages": "^6.0.0",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-code-blocks": "^0.1.4",
@@ -24,6 +26,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
